--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
   <body>
     <h1 id="index_bgi"><a href="index.html">Gangnam<br>shirt room</a></h1>
     <article class="index_article">
-      <h1>셔츠룸 아이린</h1>
+      <h1>셔츠룸 아테나 공효진실장</h1>
       <img src="s1.gif"><br>
       <img src="s2.jpg"><br><br>
       <p>강남 최대규모 최저가격 셔츠룸 <b>'아이린'</b> 입니다. 24시간 연중무휴! 언제오셔도 10만원대 저렴한 위스키 세트를 즐기실 수 있습니다. 50개의룸 최신음향시설, 고급스러운 인테리어로 고객님들의 특별한날을 더욱 더 특별한 자리로 만들어드리겠습니다.</p><br>
@@ -173,22 +173,35 @@
     </article>
     <div class="boo1">
       <h3>0부 : 저녁 9시이전 이벤트</h3>
-      <p class="boop_inf">룸 + 양주 + 과일안주 + 맥주무제한 + 음료 + 음향시설 </p>
-      <p class="boop">양주12년세트: 100,000</p>
+      <p class="boop_inf">주대10 + 티시11씩 + 룸티3 </p>
+      <p class="boop">1인 : ₩240,000 </p>
+      <p class="boop">2인 : ₩350,000 </p>
+      <p class="boop">3인 : ₩460,000 </p>
+      <p class="boop">4인 : ₩570,000 </p>
+      <p class="boop">5인 : 문의 </p>
     </div>
     <br>
     <div class="boo1">
       <h3>1부 : 저녁9시 ~ 새벽1시</h3>
-      <p class="boop_inf">룸 + 양주 + 과일안주 + 맥주무제한 + 음료 + 음향시설 </p>
-      <p class="boop">양주12년세트: 160,000</p>
+      <p class="boop_inf">주대16 + 티시11씩 + 룸티3 </p>
+      <p class="boop">1인 : ₩300,000 </p>
+      <p class="boop">2인 : ₩410,000 </p>
+      <p class="boop">3인 : ₩520,000 </p>
+      <p class="boop">4인 : ₩630,000 </p>
+      <p class="boop">5인 : 문의 </p>
     </div>
     <br>
     <div class="boo1">
       <h3>2부 : 새벽1시 ~ 오후3시</h3>
-      <p class="boop_inf">룸 + 양주 + 과일안주 + 맥주무제한 + 음료 + 음향시설 </p>
-      <p class="boop">양주12년세트: 130,000</p>
+      <p class="boop_inf">주대13 + 티시11씩 + 룸티3 </p>
+      <p class="boop">1인 : ₩270,000 </p>
+      <p class="boop">2인 : ₩380,000 </p>
+      <p class="boop">3인 : ₩490,000 </p>
+      <p class="boop">4인 : ₩600,000 </p>
+      <p class="boop">5인 : 문의 </p>
     </div>
     <br>
+    <!--
     <div class="boo1">
       <h3>T/C</h3>
       <p class="girl_inf">아가씨 1시간30분: 110,000</p>
@@ -196,8 +209,9 @@
       <p class="girl_inf">(아가씨 연장때 술추가 없을경우 T/C 140,000)</p>
       <p class="girl_inf">(절대 술추가를 강요하지 않습니다.)</p>
     </div>
+    -->
     <br>
-    <p>1개의 룸당 웨이터 기본 봉사료 30,000이 있습니다. <b>오로지 정찰제이며</b> 위 가격은 현금가 입니다.</p><br>
+    <p>오로지 정찰제이며</b> 위 가격은 현금가 입니다.</p><br>
     <p>신사역 부근에 위치해있습니다. 정확한 위치는 전화문의 주세요^^~ 감사합니다.</p><br>
     <img src="a1.gif"><br>
     <img src="a2.jpg"><br>
@@ -210,7 +224,7 @@
     <img src="6.jpg"><br>
     <p id="driving">강남 전지역 고급승용차<br>무료픽업 서비스</p>
     <footer>
-      <a href="tel:010-4994-3368">Call 터치 010.4994.3368</a>
+      <a href="tel:010-3141-8174">Call 터치 010.3141,8174</a>
     </footer>
   </body>
 </html>
